tests/negative/parse_class_no_brace.uzpp
// XATOLIK_KUTILMOQDA: parse: sinf tanasiz
ulash "uzpp_runtime.hpp"
sinf Mashina

butun asosiy() { qaytarish 0; }
